# Semi_Conductor_Report_Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
agents/doc_generation/: __init__.py  app.py  llm.py  logic.py
agents/format/: __init__.py  app.py  logic.py
agents/query_transformation/: __init__.py  app.py  logic.py
agents/rag/: app.py  corpus.py  logic.py  vector_store.py
agents/scrape/: __init__.py  app.py  logic.py
agents/supervisor/: __init__.py  app.py  frontend.py  graph.py  logic.py
agents/web_search/: __init__.py  app.py  logic.py
docker/: docker-compose.yml  service.Dockerfile
frontend/: index.html
prompts/doc_generation/: README.md
prompts/format/: README.md
prompts/query_transformation/: README.md
prompts/rag/: README.md
prompts/web_search/: README.md
sample_payloads/: doc_generation_invoke.json  format_invoke.json  query_transformation_invoke.json  rag_invoke.json  scrape_invoke.json  supervisor_invoke.json  web_search_invoke.json
scripts/: generate_graph.py  ingest_documents.py  validate_local.py
shared/: __init__.py  constants.py  embeddings.py  files.py  pdf.py  schemas.py  service_app.py
